--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- VUE src -->
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
     <!-- js/script.js -->
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js" type="module"></script>
 
     <title>Slider</title>
 </head>
