--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <div class="thumbs">
                     <div class="prev"></div>
                     <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
+                    <div class="thumb active" v-for="(slide, index) in slides" :key="index">
+                        <img :src="slide.image" :alt="slide.title" />
                     </div>
 
                 </div>
