--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!-- CSS/style.css -->
     <link rel="stylesheet" href="./css/style.css" />
     <!-- VUE src -->
-    <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- js/script.js -->
-    <script src="./js/script.js" type="module"></script>
+    <script src="js/script.js" type="module"></script>
 
     <title>Slider</title>
 </head>
@@ -23,14 +23,11 @@
             <div class="slider-wrapper" tabindex="0">
 
                 <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                    <img :src="slides[activeIndexSlide].image" :alt="slides[activeIndexSlide].title" />
                     <div class="text">
-                        <h3>Spiderman</h3>
+                        <h3>{{ slides[activeIndexSlide].title }}</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
+                            {{ slides[activeIndexSlide].text }}
                         </p>
                     </div>
                 </div>
@@ -38,7 +35,7 @@
                 <div class="thumbs">
                     <div class="prev"></div>
                     <div class="next"></div>
-                    <div class="thumb active" v-for="(slide, index) in slides" :key="index">
+                    <div class="thumb" :class="{'active': index === activeIndexSlide}" v-for="(slide, index) in slides" :key="index">
                         <img :src="slide.image" :alt="slide.title" />
                     </div>
 
