--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="app">
 
         <div class="container">
-            <div class="slider-wrapper" tabindex="0">
+            <div class="slider-wrapper" tabindex="0" @mouseover="stopTimer" @mouseleave="startTimer">
 
                 <div class="item">
                     <img :src="slides[activeIndexSlide].image" :alt="slides[activeIndexSlide].title" />
