--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="thumbs">
                     <div class="prev" @click="prevSlide"></div>
                     <div class="next" @click="nextSlide"></div>
-                    <div class="thumb" :class="{'active': index === activeIndexSlide}" v-for="(slide, index) in slides" :key="index">
+                    <div class="thumb" :class="{'active': index === activeIndexSlide}" v-for="(slide, index) in slides" :key="index" @click="goToSlide(index)">
                         <img :src="slide.image" :alt="slide.title" />
                     </div>
 
