--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- js/script.js -->
     <script src="js/script.js" type="module"></script>
-
     <title>Slider</title>
 </head>
 
 <body>
-
     <div id="app">
-
         <div class="container">
             <div class="slider-wrapper" tabindex="0" @mouseover="stopTimer" @mouseleave="startTimer">
-
                 <div class="item">
                     <img :src="slides[activeIndexSlide].image" :alt="slides[activeIndexSlide].title" />
                     <div class="text">
@@ -31,19 +27,16 @@
                         </p>
                     </div>
                 </div>
-
                 <div class="thumbs">
                     <div class="prev" @click="prevSlide"></div>
                     <div class="next" @click="nextSlide"></div>
-                    <div class="thumb" :class="{'active': index === activeIndexSlide}" v-for="(slide, index) in slides" :key="index" @click="goToSlide(index)">
+                    <div class="thumb" :class="{'active': index === activeIndexSlide}" v-for="(slide, index) in slides"
+                        :key="index" @click="goToSlide(index)">
                         <img :src="slide.image" :alt="slide.title" />
                     </div>
-
                 </div>
-
             </div>
         </div>
-
     </div>
 
 </body>
